[metadata]
name = yarn-apps-exporter
author = Andrew Grigorev
author-email = andrew@ei-grad.ru
summary = Write YARN apps metrics for node_exporter textfile
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/ei-grad/yarn-apps-exporter
project_urls =
    Bug Tracker = https://github.com/ei-grad/yarn-apps-exporter/issues
license = MIT
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    yarn
    prometheus

[files]
modules =
    yarn_apps_exporter

[entry_points]
console_scripts =
    yarn-apps-exporter = yarn_apps_exporter:main
